# yapi

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
app/: main.py
app/api/: __init__.py  ticker.py
app/models/: __init__.py  ticker_info.py
app/services/: __init__.py  ticker_fetcher.py
tests/: __init__.py
tests/api/: ticker_test.py
tests/services/: __init__.py  ticker_fetcher_test.py
