#
# setup.cfg file for cleancut/green
#
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
#

[metadata]
name = yapi
version = attr: yapi.VERSION
author = Murilo Pereira
author_email = hello@murilopereira.dev
description = A simple API for Yahoo Finance data extraction
license = MIT
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3


long_description = file:README-pypi.rst
long_description_content_type = text/x-rst; charset=UTF-8
description_file = file:README.md
description_content_type = text/markdown; charset=UTF-8

url = https://github.com/murilopereirame/yapi

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only

keywords =
    yahoo fastapi api finance stock market data
    yfinance stock


test_suite='green.test'


[options]
python_requires = >=3.8, !=3.12.1
install_requires = file:requirements.txt
include_package_data = True
packages = find:

[options.extras_require]
dev = file:requirements-dev.txt

[bdist_wheel]
universal = 1